--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
 var panorama;
 var sv = new google.maps.StreetViewService();
 var map;
-var images = 'assets/arrow_0@2x.png';
+var images = 'arrow_0@2x.png';
 
 function initialize() {
 
